--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Document</title>
 </head>
 <body>
+    <p>This is the inline code for calendly</p>
     <!-- Calendly inline widget begin -->
         <div class="calendly-inline-widget" data-url="https://calendly.com/axon-studio/meet" style="min-width:320px;height:700px;"></div>
         <script type="text/javascript" src="https://assets.calendly.com/assets/external/widget.js" async></script>
